--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,6 +8,7 @@ body {
 }
 
 .search-bar{
+  margin-top: 40px;
   width: 50%;
   border: none;
   padding: 10px;
@@ -21,6 +22,8 @@ body {
 }
 
 .search-button{
+  margin-top: 40px;
+
   background: rgba(2, 104, 122, 0.527);
   border: none;
   padding: 10px 20px;
