--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,17 +1,21 @@
 
 body {
+  background-color: antiquewhite;
 
 }
 
 .App {
   min-height: 100vh;
+  background-color: antiquewhite;
+
 }
 
 .search-bar{
   margin-top: 40px;
   width: 50%;
-  border: none;
+  border: 3px solid black;
   padding: 10px;
+  opacity: 0.53;  
 }
 
 .search-form{
@@ -23,7 +27,6 @@ body {
 
 .search-button{
   margin-top: 40px;
-
   background: rgba(2, 104, 122, 0.527);
   border: none;
   padding: 10px 20px;
@@ -39,17 +42,22 @@ body {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  /* back ground color du contour des recettes*/
+  background-color: antiquewhite;
 }
 
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+  
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
+    background-color: antiquewhite;
+
   }
 }
 
@@ -75,4 +83,7 @@ body {
   to {
     transform: rotate(360deg);
   }
+}
+.h1{
+  margin-left: 200px;
 }
