--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,12 +1,33 @@
-body {
-  background-color: #282c34;
-  padding: 40px;
-  font-family: Arial;
+.parent {
+  justify-content: center;
+  display: flex;
+  position: relative;
+  width: auto;
+  height: auto;
+  margin: auto;
+}
+.child1 {
+  
+  position: absolute;
+  width: auto;
+  height: auto;
+}
+.child2 {
+  
+  z-index: 1;
+  margin: 30px;
+  opacity: 0.85;
+  position: flex;
+  
 }
 
-.App {
-  background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-  min-height: 100vh;
+
+.carousel{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  margin-bottom: 30px;
 }
 
 .search-bar{
@@ -23,9 +44,6 @@ body {
 }
 
 .search-button{
-
-  margin-top: 40px;
-
   background: rgba(2, 104, 122, 0.527);
   border: none;
   padding: 10px 20px;
@@ -41,6 +59,12 @@ body {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+}
+
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
