--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,7 +1,7 @@
-.body {
-  padding: 40px;
-  font-family: Arial;
-  
+.body{
+  height: auto;
+  width: auto;
+
 }
 .footer{
    bottom: 0;
@@ -12,16 +12,15 @@
    height: auto;
 }
 
-.App {
-  background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-  position: relative;
-  width: auto;
-  height: auto;
-  margin-bottom: 10px;
-  margin-top: 100px;
-  opacity: 0.85;
-
+.overflow{
+  opacity: 1;
+  color: white;
 }
+
+.App{
+opacity: 0.8;
+}
+
 
 .search-bar{
   width: 50%;
@@ -94,3 +93,5 @@
   text-align: center;
   justify-content: center;
 }
+
+
