--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,8 +7,13 @@ body
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: rgb(196,196,106);
-  background: linear-gradient(90deg, rgba(196,196,106,0.9710084717480743) 0%, rgba(147,203,135,1) 31%, rgba(57,195,188,1) 72%, rgba(76,150,164,1) 100%);
+  background-image: url(img.jpeg); 
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
+
 
 code
 {
